--- a/app/views/evaluations/index.erb
+++ b/app/views/evaluations/index.erb
@@ -61,11 +61,11 @@
                                   <% elsif e.point_overall == 5 %><% p = "p5" %>
                               <% end %>
                               <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                                <option value="A"></option>
-                                <option value="B"></option>
-                                <option value="C"></option>
-                                <option value="D"></option>
-                                <option value="E"></option>
+                                <option value="1"></option>
+                                <option value="2"></option>
+                                <option value="3"></option>
+                                <option value="4"></option>
+                                <option value="5"></option>
                               </select>
                             </div>
                           </div>
@@ -80,11 +80,11 @@
                                   <% elsif e.point_easiness == 5 %><% p = "p5" %>
                               <% end %>
                               <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                                <option value="A"></option>
-                                <option value="B"></option>
-                                <option value="C"></option>
-                                <option value="D"></option>
-                                <option value="E"></option>
+                                <option value="1"></option>
+                                <option value="2"></option>
+                                <option value="3"></option>
+                                <option value="4"></option>
+                                <option value="5"></option>
                               </select>
                             </div>
                           </div>
@@ -99,11 +99,11 @@
                                   <% elsif e.point_gpa_satisfaction == 5 %><% p = "p5" %>
                               <% end %>
                               <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                                <option value="A"></option>
-                                <option value="B"></option>
-                                <option value="C"></option>
-                                <option value="D"></option>
-                                <option value="E"></option>
+                                <option value="1"></option>
+                                <option value="2"></option>
+                                <option value="3"></option>
+                                <option value="4"></option>
+                                <option value="5"></option>
                               </select>
                             </div>
                           </div>
@@ -118,11 +118,11 @@
                                   <% elsif e.point_clarity == 5 %><% p = "p5" %>
                               <% end %>
                               <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                                <option value="A"></option>
-                                <option value="B"></option>
-                                <option value="C"></option>
-                                <option value="D"></option>
-                                <option value="E"></option>
+                                <option value="1"></option>
+                                <option value="2"></option>
+                                <option value="3"></option>
+                                <option value="4"></option>
+                                <option value="5"></option>
                               </select>
                             </div>
                           </div>
@@ -144,7 +144,7 @@
 <script>
   $('.p1').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'A',
+    initialRating: '1',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -157,7 +157,7 @@
 
   $('.p2').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'B',
+    initialRating: '2',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -170,7 +170,7 @@
 
   $('.p3').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'C',
+    initialRating: '3',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -183,7 +183,7 @@
 
   $('.p4').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'D',
+    initialRating: '4',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -196,7 +196,7 @@
 
   $('.p5').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'E',
+    initialRating: '5',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
