--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,8 +1,13 @@
-<h1>강의정보</h1>
-  <p>교수님이름<%= @course.professor.name %></p>
-  <p>강의명<%= @course.lecture.name %></p>
-  <p>학교명<%= @course.university.local_name %></p>
-  <p>강평수<%= @course.evaluation_count %></p>
-  <p>전체평가평점</p>
-<h1>이 강의의 강평리스트</h1>
+<p><%= @course.lecture.name %></p>
+<% if @course.is_major == true %>
+    <p class="feed_prof_major"><span class="lec_cate lec_major">전공</span><%= @course.professor.name %> 교수님</p>
+<% else %>
+    <p class="feed_prof_kyo"><span class="lec_cate lec_kyo">교양</span><%= @course.professor.name %> 교수님</p>
+<% end %>
+총점 <%= @course.point_overall_sum / @course.evaluation_count %>
+널널함 <%= @course.point_easiness_sum / @course.evaluation_count %>
+강의만족도 <%= @course.point_gpa_satisfaction_sum / @course.evaluation_count %>
+학점만족도 <%= @course.point_clarity_sum / @course.evaluation_count %>
+<hr>
+<p>학생들의 강의평가<%= @course.evaluation_count %> | 강의의 모든것, WIKI</p>
 <%= render "evaluations" %>
