--- a/app/views/courses/index.erb
+++ b/app/views/courses/index.erb
@@ -2,20 +2,25 @@
 <div class="index_container">
   <div class="container">
     <div>
-      
-        <p class="search_sen1"><span class="search_keyword"><%= @search_param %></span>에 대한 검색 결과</p>
-        <p class="search_sen2">5개의 수업, 1개의 교수님을 찾았습니다</p>
-        
-        <table class="search_tbl">
-            <thead>
-                <tr>
-                    <th>학수번호</th>
-                    <th>과목명</th>
-                    <th>교수명</th>
-                </tr>
-            </thead>
+      <table class="search_tbl">
+        <% @professor_count = 0 %>
+        <% @courses.each do |c| %>
+            <% if c.professor.name.nil? or c.professor.name != @professor_name %>
+                <% @professor_count += 1 %>
+                <% @professor_name = c.professor.name %>
+            <% end %>
+        <% end %>
+      <p class="search_sen1"><span class="search_keyword"><%= @search_param %></span>에 대한 검색 결과</p>
+      <p class="search_sen2"><%= @courses.count %>개의 수업, <%= @professor_count %>명의 교수님을 찾았습니다</p>
+        <thead>
+        <tr>
+          <th>학수번호</th>
+          <th>과목명</th>
+          <th>교수명</th>
+        </tr>
+        </thead>
+      <% @courses.each do |c| %>
             <tbody>
-                <% @courses.each do |c| %>
                     <tr>                          
                       <td><%= c.lecture.code %></td>
                       <td>
@@ -31,7 +36,6 @@
                 <% end %>
             </tbody>
         </table>
-        
     </div>
   </div>
 </div>
