--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -40,7 +40,12 @@
                   <p class="feed_content">
                     <%= e.body.html_safe %></p>
                   <p class="feed_etc">
-                    5시간 전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
+                    <% if (time_ago_in_words(e.created_at)) == "1분 이하" %>
+                      1분
+                    <% else %>
+                      <%= time_ago_in_words(e.created_at) %>
+                    <% end %>
+                    전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
                   </p>
                 </div>
                 <div class="col-lg-3 col-md-2 visible-lg-block visible-md-block">
